Fix toolbar wrap on mobile

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -1212,6 +1212,12 @@ label.has-help > span:after {
 	color: black;
 }
 
+@media (max-width: 767px) {
+  .filter-box {
+    width: 172px;
+  }
+}
+
 .update-menu,
 .filter-menu {
 
